SPCTR-1989: Added Caption Spacing and Fixed Misaligned Active Thumbnail Issue

--- a/src/blocks/image-gallery/style.scss
+++ b/src/blocks/image-gallery/style.scss
@@ -636,7 +636,6 @@
 				bottom: 0;
 				left: 0;
 				width: 100%;
-				height: 50px;
 				display: flex;
 				align-items: center;
 				justify-content: center;
@@ -662,13 +661,12 @@
 					justify-content: center;
 					opacity: 0.5;
 					transform: scale( 75% );
-					transition-property: opacity, transform, margin;
+					transition-property: opacity, transform;
 					transition-duration: 200ms;
 
 					&-active {
 						opacity: 1;
 						transform: scale( 100% );
-						margin: 0 18px;
 					}
 
 					img {
